사용하지 않는 코드 및 주석 제거